# qxkb

./: CMakeLists.txt  NEWS  README
src/: datamodels.cpp  datamodels.h  defs.h  kswconfig.ui  main.cpp  qxkb.cpp  qxkb.h  x11tools.cpp  xkbconf.cpp  xkbt.cpp  xkbt.h  xkeyboard.cpp
